polychem/src/polymers/snapshots/polychem__polymers__polymer_chemistry__tests__parse_residues_with_duplicate_types.snap
---
source: polychem/src/polymers/polymer_chemistry.rs
description: residues
expression: out
---
  × failed to validate polymer chemistry file
  ╰─▶   × the residue type "AminoAcid" has already been defined
        help: consider consolidating duplicate types or picking a new type
      name
      
   ╭─[test:2:5]
 1 │     types {
 2 │ ╭─▶     AminoAcid {
 3 │ │           functional-group "Amino" at="N-terminal"
 4 │ │           functional-group "Carboxyl" at="C-terminal"
 5 │ ├─▶     }
   · ╰──── first defined here
 6 │         Monosaccharide
 7 │         AminoAcid
   ·         ─────┬────
   ·              ╰── then again here
 8 │     }
 9 │     AminoAcid "G" "Glycine" {
   ╰────

