polychem/src/polymers/snapshots/polychem__polymers__polymer_chemistry__tests__parse_residues_without_types.snap
---
source: polychem/src/polymers/polymer_chemistry.rs
description: residues
expression: out
---
  × failed to validate polymer chemistry file
  ╰─▶   × the residue type "AminoAcid" is undefined
        help: double-check for typos, or add "AminoAcid" to the types section
      
   ╭─[test:4:1]
 3 │     }
 4 │ ╭─▶ AminoAcid "G" "Glycine" {
 5 │ │       composition "C2H5NO2"
 6 │ ├─▶ }
   · ╰──── undefined residue type
   ╰────

